--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@grafbase/sdk": "^0.24.0",
     "@headlessui/react": "^2.0.3",
     "@types/jsonwebtoken": "^9.0.6",
     "cloudinary": "^2.2.0",
@@ -20,12 +21,12 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@grafbase/sdk": "^0.24.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@grafbase/sdk": "~0.24.0"
   }
 }
